Settings snapshot: read at the start and after each write, never on a timer
The TTL existed only to notice rows written behind the API's back - which
legitimised writing to the service's own table from outside it (Newman).
The snapshot is now taken once when the port is built and again when the
writer calls refresh(); an unreadable table fails the start or the write.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01BS28jSNLzbwirSg31jxMhL